Fix: list initilization